热更新初步实现

--- a/packages/hotUpdateTools/panel/index.html
+++ b/packages/hotUpdateTools/panel/index.html
@@ -6,6 +6,12 @@
         </div>
 
     </ui-prop>
+    <ui-prop name="版本名字">
+        <div class="flex-1 layout horizontal center">
+            <ui-input class="flex-1" v-value="versionname"></ui-input>
+        </div>
+
+    </ui-prop>
 
     <ui-prop name="资源服务器根目录">
         <div class="flex-1 layout horizontal center">
