熟悉插件路径+sqlite+sql.js

--- a/packages/stateeditor/panel/index.html
+++ b/packages/stateeditor/panel/index.html
@@ -7,12 +7,11 @@
     <script type="text/javascript" src="../node_modules/vis/dist/vis.js"></script>
     <!--<script type="text/javascript" src="../node_modules/storejs/dist/store.js"></script>-->
     <script type="text/javascript" src="../node_modules/store/store.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/sql.js"></script>
 
 
-    <!--<script type="text/javascript" src="../node_modules/require/bin/require-command.js"></script>-->
-    <!--<script type="text/javascript" src="../node_modules/exports/lib/exports.js"></script>-->
-    <!--<script type="text/javascript" src="../node_modules/util/util.js"></script>-->
+
+
     <link href="../node_modules/vis/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
 
     <style type="text/css">
@@ -68,6 +67,9 @@ stateeditor hello world
 	//  network.on("deselectNode", function (params) {
 	//	  console.log('deselectNode Event:', params);
 	//  });
+
+
+
 
 </script>
 
