测试侧边栏1

--- a/packages/stateeditor/panel/index.html
+++ b/packages/stateeditor/panel/index.html
@@ -148,6 +148,7 @@
 <script src="../lib/ArrayExtend.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/control/TreeControl.js"></script>
 
 <script type="text/javascript" >
 
